2005-12-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/ui/menubar.xml:
	* lib/gaupol/base/delegates/format.py:
	* lib/gaupol/gtk/delegates/format.py:
	  Implemented italicization toggling.

2005-12-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/debug-dialog.glade:
	* lib/gaupol/gtk/dialogs/debug.py:
	  Added a quit button.

	* data/ui/menubar.xml:
	* lib/gaupol/base/delegates/format.py:
	* lib/gaupol/gtk/delegates/format.py:
	* lib/gaupol/gtk/delegates/__init__.py:
	  Implemented dialog line toggling.

	* lib/gaupol/base/delegates/filesave.py:
	  Set changed values to zero after saving.

	* lib/gaupol/base/text/parser.py:
	  Fixed tag shifting.

	* lib/gaupol/gtk/delegates/action.py:
	  Fixed a minor bug.

	* lib/gaupol/gtk/delegates/filesave.py:
	  Cleaned up coding style.

2005-12-26  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/preferences-dialog.glade:
	  Shortened names and adjusted fallback encoding tree view's
	  properties.

	* data/ui/menubar.xml:
	* lib/gaupol/gtk/delegates/__init__.py:
	* lib/gaupol/gtk/delegates/preferences.py:
	* lib/gaupol/gtk/dialogs/preferences.py:
	  Implemented preferences dialog.

	* lib/gaupol/base/util/listlib.py:
	* lib/gaupol/base/util/relib.py:
	* lib/gaupol/base/util/wwwlib.py:
	* lib/gaupol/gtk/util/config.py:
	  Removed psyco.classes imports.

	* lib/gaupol/gtk/dialogs/debug.py:
	  Fixed multiple URL tags of the same file. Restructured code. Improved
	  dialog size guessing. Added GTK and Psyco versions to system
	  information.

2005-12-26  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/preferences-dialog.glade:
	  Renamed from prefs-dialog.glade.

2005-12-26  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/ui/menubar.xml:
	* lib/gaupol/gtk/delegates/edit.py:
	  Implemented selection manipulations.

2005-12-25  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/clipboard.py:
	* lib/gaupol/gtk/dialogs/insertsub.py:
	  Forgot to add these new files earlier.

	* lib/gaupol/gtk/dialogs/debug.py: