@@ -47,6 +47,83 @@ class FormatAction(Action):
         return bool(selection and focus)
 
 
+class CaseChangeActionMenu(FormatAction):
+
+    """Changing case."""
+
+    uim_menu_item = (
+        'show_case_menu',
+        None,
+        _('_Case')
+    )
+
+    uim_paths = ['/ui/menubar/format/case']
+
+
+class CaseLowerAction(FormatAction):
+
+    """Changing to lower case."""
+
+    uim_action_item = (
+        'use_lower_case',
+        None,
+        _('_Lower'),
+        '<control>L',
+        _('Change the selected texts to lower case'),
+        'on_use_lower_case_activated'
+    )
+
+    uim_paths = ['/ui/menubar/format/case/lower']
+
+
+class CaseSentenceAction(FormatAction):
+
+    """Changing to sentence case."""
+
+    uim_action_item = (
+        'use_sentence_case',
+        None,
+        _('_Sentence'),
+        '<control>E',
+        _('Change the selected texts to Sentence case'),
+        'on_use_sentence_case_activated'
+    )
+
+    uim_paths = ['/ui/menubar/format/case/sentence']
+
+
+class CaseTitleAction(FormatAction):
+
+    """Changing to title case."""
+
+    uim_action_item = (
+        'use_title_case',
+        None,
+        _('_Title'),
+        '<control>Y',
+        _('Change the selected texts to Title Case'),
+        'on_use_title_case_activated'
+    )
+
+    uim_paths = ['/ui/menubar/format/case/title']
+
+
+class CaseUpperAction(FormatAction):
+
+    """Changing to upper case."""
+
+    uim_action_item = (
+        'use_upper_case',
+        None,
+        _('_Upper'),
+        '<control>U',
+        _('Change the selected texts to UPPER CASE'),
+        'on_use_upper_case_activated'
+    )
+
+    uim_paths = ['/ui/menubar/format/case/upper']
+
+
 class ToggleDialogLinesAction(FormatAction):
 
     """Toggling dialog lines."""
@@ -83,6 +160,20 @@ class PreferencesDelegate(Delegate):
 
     """Formatting text."""
 
+    def _change_case(self, method):
+        """
+        Change case.
+
+        method: "title", "capitalize", "upper" or "lower"
+        """
+        page = self.get_current_page()
+        rows = page.view.get_selected_rows()
+        col  = page.view.get_focus()[1]
+        doc  = col - 4
+
+        page.project.change_case(rows, doc, method)
+        self.set_sensitivities(page)
+
     def on_toggle_dialog_lines_activated(self, *args):
         """Toggle dialog lines."""
 
@@ -104,3 +195,23 @@ class PreferencesDelegate(Delegate):
 
         page.project.toggle_italicization(rows, doc)
         self.set_sensitivities(page)
+
+    def on_use_lower_case_activated(self, *args):
+        """Use lower case."""
+
+        self._change_case('lower')
+
+    def on_use_sentence_case_activated(self, *args):
+        """Use sentence case."""
+
+        self._change_case('capitalize')
+
+    def on_use_title_case_activated(self, *args):
+        """Use title case."""
+
+        self._change_case('title')
+
+    def on_use_upper_case_activated(self, *args):
+        """Use upper case."""
+
+        self._change_case('upper')
